test_suite5/ALAN/test_suite/alan-2022-examples/failing/008500_mutation.alan
source UZ8ma function s() to while boolean begin relax end begin relax end
